--- a/html/store/store.css
+++ b/html/store/store.css
@@ -1,18 +1,18 @@
-@import url("../aside.css");
+@import url(../aside.css);
 @import url(../navbar.css);
 @import url(../footer.css);
 @import url(../../js/slick-1.8.1/slick/slick.css);
 @import url(../../js/slick-1.8.1/slick/slick-theme.css);
-*{
+* {
   box-sizing: border-box;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
+  margin: 0;
 }
-body{
+body {
   background-color: hsla(193deg, 100%, 96%, 100);
 }
 
-
-div.banner{
+div.banner {
   margin: 0 auto;
   background-image: url("./image/banner-1.jpg");
   background-repeat: no-repeat;
@@ -22,302 +22,573 @@ div.banner{
   height: 400px;
   position: relative;
 }
-p.sol{
+p.sol {
   width: 1200px;
   margin: 100px auto;
   text-align: center;
   font-size: 24px;
   color: hsla(0deg, 2%, 33%, 100);
-  
 }
-main.main{
-  border: 1px solid hsla(193deg, 100%, 96%, 100);
+main.main {
   background-color: hsla(193deg, 100%, 96%, 100);
-  width: 1200px;
+  max-width: 1440px;
   margin: 0 auto;
-  position: relative;
 }
 
-/* 和平束口袋 */
-
-div.product_1{
-  background-color: hsla(160deg, 52%, 40%, .19);
-  width: 1200px;
+div.product {
+  background-color: hsla(160deg, 52%, 40%, 0.19);
+  width: 1440px;
   height: 370px;
-  position: relative;
   margin-bottom: 350px;
 }
-
-div.product_1 > img.product_1_1{
+div.content {
+  padding-top: 70px;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  position: relative;
+}
+img.product {
   width: 550px;
   height: 450px;
   border-radius: 15px;
-  position: absolute;
-  top: 70px;
-  left: 60px;
 }
-
-div.product_1 > p.title{
+div.text {
+  padding: 20px 0px 0px 60px;
+  height: 100%;
+  min-height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+div.text_1 {
+  padding: 20px 0px 0px 60px;
+  height: 100%;
+  min-height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+p.title {
   font-size: 24px;
-  position: absolute;
-  left: 700px;
-  top: 90px;
 }
 
-div.product_1 > p.price{
+p.price {
   font-size: 18px;
   font-style: bold;
-  position: absolute;
-  left: 702px;
-  top: 140px;
 }
 
-div.product_1 > p.content{
+p.content {
   font-size: 18px;
-  position: absolute;
-  left: 702px;
-  top: 180px;
-  width: 420px;
 }
 
-div.product_1 > button{
-  background-color: hsla(47deg, 78%, 74%, 100); 
+button {
+  background-color: hsla(47deg, 78%, 74%, 100);
   border-color: hsla(47deg, 78%, 74%, 100);
   border-radius: 5px;
-  border-width: 1px; 
+  border-width: 1px;
   width: 160px;
-  height: 50px; 
+  height: 50px;
   font-size: 24px;
   position: absolute;
-  left: 825px;
+  left: 80%;
   top: 420px;
   cursor: pointer;
-} 
+}
+.p1_play,
+.p2_play,
+.p3_play,
+.p4_play,
+.p5_play {
+  flex-shrink: 0;
+  overflow: hidden;
+}
+/* -----------------------RWD -----------------------*/
+@media (max-width: 575.98px) {
+  div.banner {
+    margin: 0 auto;
+    background-image: url("./image/banner-2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-width: 100%;
+    height: 300px;
+    position: relative;
+  }
+  p.sol {
+    width: 340px;
+    margin: 80px auto;
+    margin-bottom: 80px;
+    font-size: 20px;
+    text-align: justify;
+    color: hsla(0deg, 2%, 33%, 100);
+  }
+  div.bread {
+    width: 100%;
+    min-width: 100%;
+    margin: 0 auto;
+    background-color: hsla(160deg, 52%, 40%, 15%);
+    height: 30px;
+  }
+  div.center {
+    width: fit-content;
+    margin: 0 auto;
+  }
+  div.bread a {
+    line-height: 30px;
+  }
+  div.bread a:first-child {
+    padding-left: 0px;
+    text-align: center;
+  }
+  main.main {
+    background-color: hsla(193deg, 100%, 96%, 100);
+    width: 100%;
+    margin: 0 auto;
+  }
 
-/* 和平餐具袋 */
+  div.product {
+    background-color: hsla(160deg, 52%, 40%, 0.19);
+    width: 100%;
+    height: initial;
+    margin-bottom: 100px;
+    border-radius: 15px;
+  }
+  div.content {
+    padding-top: 50px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
+  div.text {
+    padding: 20px 20px 80px 20px;
+    height: 270px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  p.title {
+    font-size: 20px;
+    text-align: center;
+  }
 
-div.product_2{
-  background-color: hsla(160deg, 52%, 40%, .19);
-  width: 1200px;
-  height: 370px;
-  display: block;
-  position: relative;
-  margin-bottom: 350px;
+  p.price {
+    font-size: 16px;
+    font-style: bold;
+    text-align: center;
+  }
+
+  p.content {
+    font-size: 16px;
+  }
+
+  button {
+    background-color: hsla(47deg, 78%, 74%, 100);
+    border-color: hsla(47deg, 78%, 74%, 100);
+    border-radius: 5px;
+    border-width: 1px;
+    width: 140px;
+    height: 50px;
+    font-size: 20px;
+    position: relative;
+    left: 50%;
+    top: -45px;
+    transform: translateX(-50%);
+    cursor: pointer;
+  }
+  .p1_play,
+  .p2_play,
+  .p3_play,
+  .p4_play,
+  .p5_play {
+    width: 95%;
+    display: block;
+    margin: 0 auto;
+    height: 66.666666vw;
+    flex-shrink: 0;
+    overflow: hidden;
+  }
 }
 
-div.product_2 > img.product_2_1{
-  width: 550px;
-  height: 450px;
-  border-radius: 15px;
-  position: absolute;
-  top: 70px;
-  left: 60px;
+@media (min-width: 576px) and (max-width: 767.98px) {
+  div.banner {
+    margin: 0 auto;
+    background-image: url("./image/banner-2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-width: 100%;
+    height: 300px;
+    position: relative;
+  }
+  p.sol {
+    max-width: 100%;
+    margin: 80px auto;
+    margin-bottom: 80px;
+    font-size: 20px;
+    text-align: center;
+    color: hsla(0deg, 2%, 33%, 100);
+  }
+  div.bread {
+    width: 100%;
+    min-width: 100%;
+    margin: 0 auto;
+    background-color: hsla(160deg, 52%, 40%, 15%);
+    height: 30px;
+  }
+  div.center {
+    width: fit-content;
+    margin: 0 auto;
+  }
+  div.bread a {
+    line-height: 30px;
+  }
+  div.bread a:first-child {
+    padding-left: 0px;
+    text-align: center;
+  }
+  main.main {
+    background-color: hsla(193deg, 100%, 96%, 100);
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  div.product {
+    background-color: hsla(160deg, 52%, 40%, 0.19);
+    width: 100%;
+    height: initial;
+    margin-bottom: 100px;
+    border-radius: 15px;
+  }
+  div.content {
+    padding-top: 50px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
+  div.text {
+    padding: 50px 20px 80px 20px;
+    height: 270px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  p.title {
+    font-size: 20px;
+    text-align: center;
+  }
+
+  p.price {
+    text-align: center;
+    font-size: 16px;
+    font-style: bold;
+  }
+
+  p.content {
+    font-size: 16px;
+    margin: 0 auto;
+    max-width: 80%;
+  }
+
+  button {
+    background-color: hsla(47deg, 78%, 74%, 100);
+    border-color: hsla(47deg, 78%, 74%, 100);
+    border-radius: 5px;
+    border-width: 1px;
+    width: 140px;
+    height: 50px;
+    font-size: 20px;
+    position: relative;
+    left: 50%;
+    top: -45px;
+    transform: translateX(-50%);
+    cursor: pointer;
+  }
+  .p1_play,
+  .p2_play,
+  .p3_play,
+  .p4_play,
+  .p5_play {
+    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+    height: 66.666666666666666666%;
+    flex-shrink: 0;
+    overflow: hidden;
+    border-radius: 15px;
+  }
 }
 
-div.product_2 > p.title{
-  font-size: 24px;
-  position: absolute;
-  left: 700px;
-  top: 90px;
+@media (min-width: 768px) and (max-width: 991.98px) {
+  main.main {
+    background-color: hsla(193deg, 100%, 96%, 100);
+    width: 100%;
+    margin: 0 auto;
+  }
+  div.banner {
+    margin: 0 auto;
+    background-image: url("./image/banner-1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-width: 100%;
+    height: 400px;
+    position: relative;
+  }
+  p.sol {
+    max-width: 100%;
+    margin: 80px auto;
+    margin-bottom: 80px;
+    font-size: 20px;
+    text-align: center;
+    color: hsla(0deg, 2%, 33%, 100);
+  }
+  div.bread {
+    width: 100%;
+    min-width: 100%;
+    margin: 0 auto;
+    background-color: hsla(160deg, 52%, 40%, 15%);
+    height: 30px;
+  }
+  div.center {
+    width: fit-content;
+    margin: 0 auto;
+  }
+  div.bread a {
+    line-height: 30px;
+  }
+  div.bread a:first-child {
+    padding-left: 0px;
+    text-align: center;
+  }
+  main.main {
+    background-color: hsla(193deg, 100%, 96%, 100);
+    width: 100%;
+    margin: 0 auto;
+  }
+  div.product {
+    background-color: hsla(160deg, 52%, 40%, 0.19);
+    width: 100%;
+    height: 370px;
+    margin-bottom: 350px;
+  }
+  div.product_area{
+    width: 100%;
+  }
+  div.content {
+    padding-top: 70px;
+    width: 1200px;
+    max-width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    position: relative;
+  }
+  div.text {
+    padding: 20px 0px 0px 0px;
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 10 auto;
+    padding-left: 20px;
+  }
+  p.title {
+    font-size: 24px;
+  }
+
+  p.price {
+    font-size: 18px;
+    font-style: bold;
+  }
+
+  p.content {                                       
+    font-size: 18px;
+    width: 90%;
+  }
+
+  button {
+    background-color: hsla(47deg, 78%, 74%, 100);
+    border-color: hsla(47deg, 78%, 74%, 100);
+    border-radius: 5px;
+    border-width: 1px;
+    width: 160px;
+    height: 50px;
+    font-size: 24px;
+    position: absolute;
+    left: 70%;
+    top: 420px;
+    cursor: pointer;
+  }
+  .p1_play,
+  .p2_play,
+  .p3_play,
+  .p4_play,
+  .p5_play {
+    /* width: 480px; */
+    margin: 0 auto;
+    height: 66.666666666666666666%;
+    overflow: hidden;
+    padding-left: 20px;
+   
+  }
+  ul.slides {
+    width: 480px !important;
+    height: 380px !important;
+    object-fit:fill !important;
+    flex-shrink: 0;
+    overflow: hidden;
+    border-radius: 15px;
+  }
 }
 
-div.product_2 > p.price{
-  font-size: 18px;
-  font-style: bold;
-  position: absolute;
-  left: 702px;
-  top: 140px;
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  div.banner {
+    margin: 0 auto;
+    background-image: url("./image/banner-1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    min-width: 100%;
+    height: 400px;
+    position: relative;
+  }
+  div.bread {
+    width: 100%;
+    min-width: 100%;
+    margin: 0 auto;
+    background-color: hsla(160deg, 52%, 40%, 15%);
+    height: 30px;
+  }
+  div.center {
+    width: fit-content;
+    margin: 0 auto;
+  }
+  div.bread a {
+    line-height: 30px;
+  }
+  div.bread a:first-child {
+    padding-left: 0px;
+    text-align: center;
+  }
+  main.main {
+    background-color: hsla(193deg, 100%, 96%, 100);
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+  }
+  div.product {
+    background-color: hsla(160deg, 52%, 40%, 0.19);
+    width: 100%;
+    height: 370px;
+    margin-bottom: 350px;
+  }
+  div.product_area{
+    width: 100%;
+  }
+  div.content {
+    padding-top: 70px;
+    width: 1200px;
+    max-width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    position: relative;
+  }
+  img.product {
+    width: 550px;
+    height: 450px;
+    border-radius: 15px;
+  }
+  div.text {
+    padding: 20px 0px 0px 60px;
+    height: 100%;
+    min-height: 230px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  p.title {
+    font-size: 24px;
+  }
+  
+  p.price {
+    font-size: 18px;
+    font-style: bold;
+  }
+  
+  p.content {
+    font-size: 18px;
+    max-width: 350px;
+  }
+  
+  button {
+    background-color: hsla(47deg, 78%, 74%, 100);
+    border-color: hsla(47deg, 78%, 74%, 100);
+    border-radius: 5px;
+    border-width: 1px;
+    width: 160px;
+    height: 50px;
+    font-size: 24px;
+    position: absolute;
+    left: 75%;
+    top: 420px;
+    cursor: pointer;
+  }
+  .p1_play,
+  .p2_play,
+  .p3_play,
+  .p4_play,
+  .p5_play {
+    padding-left: 20px;
+    flex-shrink: 0;
+    overflow: hidden;
+    
+  }
+  ul.slides {
+    width: 500px !important;
+    height: 400px !important;
+    overflow: hidden;
+    border-radius: 15px;
+  }
 }
-
-div.product_2 > p.content{
-  font-size: 18px;
-  position: absolute;
-  left: 702px;
-  top: 180px;
-  width: 420px;
-}
-
-div.product_2 > button{
-  background-color: hsla(47deg, 78%, 74%, 100); 
-  border-color: hsla(47deg, 78%, 74%, 100);
-  border-radius: 5px;
-  border-width: 1px; 
-  width: 160px;
-  height: 50px; 
-  font-size: 24px;
-  position: absolute;
-  left: 825px;
-  top: 420px;
-  cursor: pointer;
-} 
-
-/* 和平純棉柔感毛巾 */
-
-div.product_3{
-  background-color: hsla(160deg, 52%, 40%, .19);
-  width: 1200px;
-  height: 370px;
-  position: relative;
-  margin-bottom: 350px;
-  /* position: absolute;
-  top: 1660px; */
-}
-
-div.product_3 > img.product_3_1{
-  width: 550px;
-  height: 450px;
-  border-radius: 15px;
-  position: absolute;
-  top: 70px;
-  left: 60px;
-}
-
-div.product_3 > p.title{
-  font-size: 24px;
-  position: absolute;
-  left: 700px;
-  top: 90px;
-}
-
-div.product_3 > p.price{
-  font-size: 18px;
-  font-style: bold;
-  position: absolute;
-  left: 702px;
-  top: 140px;
-}
-
-div.product_3 > p.content{
-  font-size: 18px;
-  position: absolute;
-  left: 702px;
-  top: 180px;
-  width: 420px;
-}
-
-div.product_3 > button{
-  background-color: hsla(47deg, 78%, 74%, 100); 
-  border-color: hsla(47deg, 78%, 74%, 100);
-  border-radius: 5px;
-  border-width: 1px; 
-  width: 160px;
-  height: 50px; 
-  font-size: 24px;
-  position: absolute;
-  left: 825px;
-  top: 420px;
-  cursor: pointer;
-} 
-
-/* 和平刺繡三用包 */
-
-div.product_4{
-  background-color: hsla(160deg, 52%, 40%, .19);
-  width: 1200px;
-  height: 370px;
-  position: relative;
-  margin-bottom: 350px;
-}
-
-div.product_4 > img.product_4_1{
-  width: 550px;
-  height: 450px;
-  border-radius: 15px;
-  position: relative;
-  top: 70px;
-  left: 60px;
-  margin-bottom: 350px;
-}
-
-div.product_4 > p.title{
-  font-size: 24px;
-  position: absolute;
-  left: 700px;
-  top: 90px;
-}
-
-div.product_4 > p.price{
-  font-size: 18px;
-  font-style: bold;
-  position: absolute;
-  left: 702px;
-  top: 140px;
-}
-
-div.product_4 > p.content{
-  font-size: 18px;
-  position: absolute;
-  left: 702px;
-  top: 180px;
-  width: 420px;
-}
-
-div.product_4 > button{
-  background-color: hsla(47deg, 78%, 74%, 100); 
-  border-color: hsla(47deg, 78%, 74%, 100);
-  border-radius: 5px;
-  border-width: 1px; 
-  width: 160px;
-  height: 50px; 
-  font-size: 24px;
-  position: absolute;
-  left: 825px;
-  top: 420px;
-  cursor: pointer;
-} 
-
-/* 和平小提袋 */
-
-div.product_5{
-  background-color: hsla(160deg, 52%, 40%, .19);
-  width: 1200px;
-  height: 370px;
-  position: relative;
-  margin-bottom: 350px;
-}
-
-div.product_5 > img.product_5_1{
-  width: 550px;
-  height: 450px;
-  border-radius: 15px;
-  position: absolute;
-  top: 70px;
-  left: 60px;
-}
-
-div.product_5 > p.title{
-  font-size: 24px;
-  position: absolute;
-  left: 700px;
-  top: 90px;
-}
-
-div.product_5 > p.price{
-  font-size: 18px;
-  font-style: bold;
-  position: absolute;
-  left: 702px;
-  top: 140px;
-}
-
-div.product_5 > p.content{
-  font-size: 18px;
-  position: absolute;
-  left: 702px;
-  top: 180px;
-  width: 420px;
-}
-
-div.product_5 > button{
-  background-color: hsla(47deg, 78%, 74%, 100); 
-  border-color: hsla(47deg, 78%, 74%, 100);
-  border-radius: 5px;
-  border-width: 1px; 
-  width: 160px;
-  height: 50px; 
-  font-size: 24px;
-  position: absolute;
-  left: 825px;
-  top: 420px;
-  cursor: pointer;
-} 
+@media (min-width: 1200px) and (max-width: 1440px) {
+  div.product {
+    background-color: hsla(160deg, 52%, 40%, 0.19);
+    width: 100%;
+    height: 370px;
+    margin-bottom: 350px;
+  }
+  div.product_area{
+    width: 100%;
+  }
+  div.content {
+    padding-top: 70px;
+    width: 1200px;
+    max-width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    position: relative;
+  }
+  p.content {
+    font-size: 18px;
+    max-width: 390px; 
+  }
+  button {
+    background-color: hsla(47deg, 78%, 74%, 100);
+    border-color: hsla(47deg, 78%, 74%, 100);
+    border-radius: 5px;
+    border-width: 1px;
+    width: 160px;
+    height: 50px;
+    font-size: 24px;
+    position: absolute;
+    left: 75%;
+    top: 420px;
+    cursor: pointer;
+  }
+  }
