--- a/html/master/master.css
+++ b/html/master/master.css
@@ -20,8 +20,8 @@ main.main {
   width: 100%;
   min-width: 1200px;
   margin: 0 auto;
-  position: relative;
   background-color: hsla(193deg, 100%, 96%, 100);
+  overflow: hidden;
 }
 
 article.frist {
@@ -93,13 +93,13 @@ article.three {
   z-index: 2;
 }
 div.middle {
-  z-index: 100;
+  z-index: 0;
   margin: 0 auto;
 }
 .block_3_1 {
   margin-right: 50px;
   margin-bottom: 50px;
-  z-index: 100;
+  z-index: 0;
 }
 article.three > img.back {
   position: absolute;
@@ -132,6 +132,7 @@ article.four p {
   font-size: 18px;
 }
 article.four p.one {
+  font-size: 18px;
   width: fit-content;
   margin: 0 auto;
   padding: 80px 0px 120px 0px;
@@ -158,7 +159,7 @@ article.four img.back {
 }
 div.middle_1 {
   margin: 0 auto;
-  z-index: 100;
+  z-index: 1;
 }
 #img {
   vertical-align: middle;
@@ -230,7 +231,7 @@ div.middle_1 {
   main > p.title {
     margin: 0 auto;
     padding-top: 800px;
-    padding: 80px 20px 30px 20px;
+    padding: 50px 20px 30px 20px;
     width: 100%;
     font-size: 18px;
     /* display: none; */
@@ -243,7 +244,7 @@ div.middle_1 {
     width: 100%;
     height: 50%;
     margin: 0 auto;
-    padding: 80px 0 80px 0;
+    padding: 80px 0 60px 0;
     position: relative;
   }
   article.two p.one {
@@ -262,120 +263,738 @@ div.middle_1 {
   div.background img:nth-child(2) {
     padding: 20px;
     margin: 0px 0px 0px 0px;
+    height: 66.666666vw;
     order: 4;
   }
   div.background img:nth-child(3) {
     padding: 0 20px 0 20px;
     position: static;
+    height: 66.666666vw;
     order: 1;
   }
   div.background img:nth-child(4) {
     padding: 20px;
+    height: 66.666666vw;
     position: static;
     order: 3;
   }
   /* ----------------------第三區------------------ */
   article.three {
-    margin-top: 72px;
+    margin-top: 80px;
+    width: 100%;
     position: relative;
     font-size: 0;
-    z-index: 2;
+    z-index: 1;
   }
   div.middle {
-    z-index: 100;
+    width: 100%;
+    z-index: 1;
     margin: 0 auto;
   }
   .block_3_1 {
-    margin-right: 50px;
-    margin-bottom: 50px;
-    z-index: 100;
+    width: 80%;
+    margin-right: 0px;
+    margin-bottom: 30px;
+    z-index: 1;
+  }
+  .block_3_2 {
+    width: 80%;
+    margin-right: 0px;
+    margin-bottom: 30px;
+    float: right;
+    z-index: 1;
   }
   article.three > img.back {
+    display: none;
     position: absolute;
     left: 0;
     top: 168px;
+   
   }
 
   article.three > img:nth-child(2) {
-    margin: 70px 0px 0px 50px;
+    width: 70%;
+    margin: 70px 0px 0px 0px;
+    
   }
 
   article.three p {
     font-size: 18px;
-    width: 590px;
+    width: 100%;
     margin: 0 auto;
-    padding-top: 55px;
+    padding-top: 0px;
+    padding: 0px 20px 0px 10px;
+    text-align: left;
+    display: inline-block;
   }
 
   /* ----------------------第四區------------------ */
   article.four {
-    margin-top: 120px;
+    margin-top: 80px;
     position: relative;
     font-size: 0;
   }
   article.four img:nth-child(1) {
-    margin: 0px 35px 0px 0px;
+    display: block;
+    width: 90%;
+    padding-bottom: 35px;
+    margin: 0 auto;
   }
-
+  article.four img:nth-child(2) {
+    display: block;
+    width: 90%;
+    margin: 0 auto;
+    padding-bottom: 35px;
+  }
   article.four p {
     font-size: 18px;
+
   }
   article.four p.one {
-    width: fit-content;
+    width: 100%;
     margin: 0 auto;
-    padding: 80px 0px 120px 0px;
-  }
-
-  article.four img:nth-child(4) {
-    display: inline-block;
-    vertical-align: top;
-    z-index: 10;
-    margin: 0px 0px 120px 100px;
+    padding: 0px 20px 60px 20px;
   }
 
   article.four p.two {
-    width: 376px;
-    height: 76px;
+    width: 100%;
+    padding: 0px 20px 80px 20px;
     margin: 0 auto;
     display: inline-block;
+    margin-bottom: 80px;
   }
 
   article.four img.back {
     position: absolute;
     right: 0;
     bottom: 120px;
+    display: none;
+  }
+  div.middle_1 {
+    margin: 0 auto;
+    z-index: 1;
+  }
+  #img {
+    display: block;
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 0px;
+  }
+}
+@media (min-width: 576px) and (max-width: 767.98px) {
+  div.banner {
+    margin: 0 auto;
+    background-image: url("./images/banner_2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-width: 100%;
+    height: 300px;
+    position: relative;
+  }
+  p.sol {
+    width: 340px;
+    margin: 80px auto;
+    margin-bottom: 150px;
+    font-size: 20px;
+    text-align: justify;
+    color: hsla(0deg, 2%, 33%, 100);
+  }
+  div.bread {
+    width: 100% !important;
+    min-width: 0 !important;
+    background-color: hsla(160deg, 52%, 40%, 15%);
+    height: 30px;
+  }
+  div.center {
+    width: fit-content;
+    margin: 0 auto;
+  }
+  div.bread a {
+    line-height: 30px;
+  }
+  div.bread a:first-child {
+    padding-left: 0px !important;
+    text-align: center;
+  }
+  main.main {
+    padding-top: 0;
+    width: 100%;
+    min-width: 0;
+    position: relative;
+    background-color: hsla(193deg, 100%, 96%, 100);
+  }
+  article.frist {
+    width: 85%;
+  }
+  article.frist > img {
+    display: block;
+    width: 100%;
+    padding-top: 120px;
+    left: 0;
+    margin: 0 auto;
+  }
+
+  article.frist p {
+    width: 80%;
+    position: static;
+    margin: 0 auto;
+    padding-top: 50px;
+    font-size: 20px;
+    padding-bottom: 50px;
+  }
+
+  main > p.title {
+    margin: 0 auto;
+    padding-top: 800px;
+    padding: 50px 20px 80px 20px;
+    width: 85%;
+    font-size: 18px;
+    /* display: none; */
+  }
+
+  article.two div.background {
+    display: flex;
+    flex-direction: column;
+    border-radius: 30px;
+    width: 80%;
+    height: 50%;
+    margin: 0 auto;
+    padding: 80px 0 60px 0;
+    position: relative;
+  }
+  article.two p.one {
+    width: 85%;
+    font-size: 18px;
+    margin-left: 0px;
+    margin: 0 auto;
+    padding: 20px 20px 50px 20px;
+    order: 2;
+  }
+  article.two p.two {
+    width: 85%;
+    margin: 0 auto;
+    position: static;
+    order: 5;
+    padding: 0px 20px 0px 20px;
+  }
+  div.background img:nth-child(2) {
+    width: 100%;
+    padding: 20px;
+    margin: 0px 0px 0px 0px;
+    height: 50.666666vw;
+    order: 4;
+  }
+  div.background img:nth-child(3) {
+    width: 100%;
+    padding: 0 20px 0 20px;
+    position: static;
+    height: 50.666666vw;
+    order: 1;
+  }
+  div.background img:nth-child(4) {
+    width: 100%;
+    padding: 20px;
+    height: 50.666666vw;
+    position: static;
+    order: 3;
+  }
+  /* ----------------------第三區------------------ */
+  article.three {
+    margin-top: 80px;
+    width: 100%;
+    position: relative;
+    font-size: 0;
+    z-index: 0;
+  }
+  div.middle {
+    width: 80%;
+    z-index: 0;
+    margin: 0 auto;
+  }
+  .block_3_1 {
+    width: 80%;
+    margin-right: 0px;
+    margin-bottom: 30px;
+    z-index: 0;
+  }
+  .block_3_2 {
+    width: 80%;
+    margin-right: 0px;
+    margin-bottom: 30px;
+    float: right;
+    z-index: 0;
+  }
+  article.three > img.back {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 168px;
+   
+  }
+
+  article.three > img:nth-child(2) {
+    width: 70%;
+    margin: 70px 0px 0px 0px;
+    
+  }
+
+  article.three p {
+    position: relative;
+    left: 10%;
+    font-size: 18px;
+    width: 80%;
+    margin: 0 auto;
+    padding: 0px 20px 0px 10px;
+    display: inline-block;
+  }
+
+  /* ----------------------第四區------------------ */
+  article.four {
+    margin-top: 80px;
+    position: relative;
+    font-size: 0;
+  }
+  article.four img:nth-child(1) {
+    width: 100%;
+    margin: 0px 0px 35px 0px;
+  }
+  article.four img:nth-child(2) {
+    width: 100%;
+    margin: 0px 0px 35px 0px;
+  }
+  article.four p {
+    text-align: center;
+    font-size: 18px;
+
+  }
+  article.four p.one {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0px 20px 60px 20px;
+  }
+
+  article.four p.two {
+    width: 80%;
+    padding: 0px 20px 80px 20px;
+    margin: 0 auto;
+    text-align: left;
+    position: relative;
+    left: 10%;
+    margin-bottom: 80px;
+  }
+
+  article.four img.back {
+    position: absolute;
+    right: 0;
+    bottom: 120px;
+    display: none;
   }
   div.middle_1 {
     margin: 0 auto;
     z-index: 100;
   }
   #img {
-    vertical-align: middle;
-    margin-bottom: 120px;
-  }
-}
-@media (min-width: 576px) and (max-width: 767.98px) {
-  div.my_div1 {
-    width: 540px;
+    width: 80%;
+    display: block;
+    
+    margin: 0 auto;
+    margin-bottom: 30px;
   }
 }
 @media (min-width: 768px) and (max-width: 991.98px) {
-  div.my_div1 {
-    width: 720px;
-  }
+div.banner {
+  background-image: url("./images/banner.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  width: 100%;
+  min-width: 100%;
+  height: 400px;
+}
+main.main {
+  padding-top: 100px;
+  width: 100%;
+  min-width: 100%;
+  margin: 0 auto;
+  background-color: hsla(193deg, 100%, 96%, 100);
+  overflow: hidden;
+}
+div.bread {
+  width: 100% !important;
+  min-width: 0 !important;
+  background-color: hsla(160deg, 52%, 40%, 15%);
+  height: 30px;
+}
+div.center {
+  width: fit-content;
+  margin: 0 auto;
+}
+div.bread a {
+  line-height: 30px;
+}
+div.bread a:first-child {
+  padding-left: 0px !important;
+  text-align: center;
+}
+article.frist {
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+article.frist > img {
+  display: inline-block;
+  vertical-align: bottom;
+  position: relative;
+  left: 0;
+}
+article.frist p {
+  position: absolute;
+  top: 750px;
+  left: 45%;
+  font-size: 24px;
+}
+
+main > p.title {
+  margin: 0 auto;
+  padding-top: 200px;
+  padding: 200px 0px 80px;
+  width: 80%;
+  font-size: 18px;
+}
+
+article.two div.background {
+  display: flex;
+  flex-direction: column;
+  border-radius: 30px;
+  width: 100%;
+  height: 50%;
+  margin: 0 auto;
+  padding: 80px 0 60px 0;
+  position: relative;
+}
+article.two p.one {
+  width: 600px;
+  font-size: 18px;
+  margin-left: 0px;
+  margin: 0 auto;
+  padding: 50px 20px 50px 20px;
+  order: 2;
+}
+article.two p.two {
+  font-size: 18px;
+  width: 600px;
+  margin: 0 auto;
+  position: static;
+  order: 5;
+  padding: 30px 20px 0px 20px;
+}
+div.background img:nth-child(2) {
+  align-self: flex-start;
+  width: 600px;
+  padding: 20px 0px 20px 50px;
+  margin: 0px 0px 0px 0px;
+  order: 4;
+}
+div.background img:nth-child(3) {
+  align-self: flex-start;
+  width: 600px;
+  padding: 0 20px 0 50px;
+  position: static;
+  order: 1;
+}
+div.background img:nth-child(4) {
+  align-self: flex-end;
+  width: 600px;
+  padding: 20px;
+  padding-right: 50px;
+  position: static;
+  order: 3;
+}
+/* ----------------------第三區------------------ */
+article.three {
+  margin-top: 80px;
+  width: 100%;
+  position: relative;
+  font-size: 0;
+  z-index: 0;
+}
+div.middle {
+  width: 80%;
+  z-index: 0;
+  margin: 0 auto;
+}
+.block_3_1 {
+  width: 80%;
+  margin-right: 0px;
+  margin-bottom: 60px;
+  z-index: 0;
+}
+.block_3_2 {
+  width: 80%;
+  margin-right: 0px;
+  margin-bottom: 50px;
+  float: right;
+  z-index: 0;
+}
+article.three > img.back {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 168px;
+ 
+}
+
+article.three > img:nth-child(2) {
+  width: 70%;
+  margin: 70px 0px 0px 0px;
+}
+
+article.three p {
+  font-size: 18px;
+  width: 600px;
+  margin: 0 auto;
+  padding: 0px 20px 50px 10px;
+  display: flex;
+}
+
+/* ----------------------第四區------------------ */
+article.four {
+  margin-top: 80px;
+  position: relative;
+  font-size: 0;
+}
+article.four img:nth-child(1) {
+  display: block;
+  width: inherit;
+  margin: 0 auto;
+  padding-bottom: 50px;
+}
+article.four img:nth-child(2) {
+  display: block;
+  width: inherit;
+  margin: 0 auto;
+  padding-bottom: 50px;
+}
+article.four p {
+  text-align: center;
+  font-size: 18px;
+
+}
+article.four p.one {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0px 20px 100px 20px;
+}
+
+article.four p.two {
+  width: 600px;
+  padding: 0px 20px 80px 20px;
+  margin: 0 auto;
+  text-align: left;
+  margin-bottom: 80px;
+}
+
+article.four img.back {
+  position: absolute;
+  right: 0;
+  bottom: 120px;
+  display: none;
+}
+div.middle_1 {
+  margin: 0 auto;
+  z-index: 100;
+}
+#img {
+  width: 629px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 0px;
+}
 }
 @media (min-width: 992px) and (max-width: 1199.98px) {
-  div.my_div1 {
-    width: 960px;
-  }
+div.banner {
+  margin: 0 auto;
+  background-image: url("./images/banner.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  width: 100%;
+  min-width: 100%;
+  height: 400px;
+}main.main {
+  padding-top: 100px;
+  width: 100%;
+  min-width: 100%;
+  margin: 0 auto;
+  background-color: hsla(193deg, 100%, 96%, 100);
+  overflow: hidden;
 }
-@media (min-width: 1200px) and (max-width: 1399.98px) {
-  div.my_div1 {
-    width: 1140px;
-  }
+div.bread {
+  width: 100% !important;
+  min-width: 0 !important;
+  background-color: hsla(160deg, 52%, 40%, 15%);
+  height: 30px;
 }
-@media (min-width: 1400px) {
-  div.my_div1 {
-    width: 1320px;
-  }
+div.center {
+  width: fit-content;
+  margin: 0 auto;
 }
+div.bread a {
+  line-height: 30px;
+}
+div.bread a:first-child {
+  padding-left: 0px !important;
+  text-align: center;
+}
+article.frist {
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+article.frist > img {
+  display: inline-block;
+  vertical-align: bottom;
+  position: relative;
+  left: 10%;
+}
+article.frist p {
+  
+  position: absolute;
+  top: 750px;
+  left: 45%;
+  font-size: 24px;
+}
+
+main > p.title {
+  margin: 0 auto;
+  padding-top: 200px;
+  padding: 200px 0px 80px;
+  width: 700px;
+  font-size: 18px;
+}
+main.main{
+  width: 100%;
+}
+article.two div.background {
+  background-color: hsla(160deg, 52%, 40%, 0.15);
+  border-radius: 50%;
+  width: 100%;
+  height: 100vw;
+  margin: 0 auto;
+  padding-top: 216px;
+  position: relative;
+}
+article.two p.one {
+  width: 488px;
+  font-size: 18px;
+  margin-left: 60px;
+  padding-top: 93px;
+}
+article.two p.two {
+  width: 600px;
+  position: absolute;
+  left: 246px;
+  top: 884px;
+}
+div.background img:nth-child(2) {
+  margin: 35px 0px 0px 60px;
+}
+div.background img:nth-child(3) {
+  position: absolute;
+  left: 580px;
+  top: 216px;
+}
+div.background img:nth-child(4) {
+  position: absolute;
+  left: 580px;
+  top: 561px;
+}
+/* ----------------------第三區------------------ */
+article.three {
+  margin-top: 72px;
+  position: relative;
+  font-size: 0;
+  z-index: 0;
+}
+div.middle {
+  z-index: 0;
+  margin: 0 auto;
+}
+img.block_3_1 {
+  width: 450px;
+  margin-right: 30px;
+  margin-bottom: 50px;
+  z-index: 0;
+}
+img.block_3_2 {
+  width: 450px;
+}
+article.three > img.back {
+  position: absolute;
+  left: 0;
+  top: 168px;
+  display: none;
+}
+
+article.three > img:nth-child(2) {
+  margin: 70px 0px 0px 50px;
+}
+
+article.three p {
+  font-size: 18px;
+  width: 590px;
+  margin: 0 auto;
+  padding-top: 55px;
+}
+
+/* ----------------------第四區------------------ */
+article.four {
+  margin-top: 120px;
+  position: relative;
+  font-size: 0;
+}
+article.four img:nth-child(1) {
+  width: 500px;
+  margin: 0px 35px 0px 0px;
+}
+
+article.four p {
+  font-size: 18px;
+}
+article.four p.one {
+  font-size: 18px;
+  width: fit-content;
+  margin: 0 auto;
+  padding: 80px 0px 120px 0px;
+}
+
+article.four img:nth-child(4) {
+  display: inline-block;
+  vertical-align: top;
+  z-index: 10;
+  margin: 0px 0px 120px 100px;
+}
+
+article.four p.two {
+  width: 376px;
+  height: 76px;
+  margin: 0 auto;
+  display: inline-block;
+}
+
+article.four img.back {
+  position: absolute;
+  right: 0;
+  bottom: 120px;
+  display: none;
+}
+div.middle_1 {
+  margin: 0 auto;
+  z-index: 1;
+}
+#img {
+  vertical-align: middle;
+  margin-bottom: 120px;
+}
+}
+
