--- a/html/mountain/mountain_rwd.css
+++ b/html/mountain/mountain_rwd.css
@@ -748,3 +748,40 @@ a.bottom_gap:hover div {
     display: none;
   }
 }
+@media (min-width: 1025px) and (max-width: 1199.98px) {
+  div.banner {
+    margin: 0 auto;
+    background-image: url("./images/banner.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-width: 100%;
+    height: 350px;
+    position: relative;
+  }
+  p.sol {
+    width: 80%;
+    margin: 80px auto;
+    margin-bottom: 150px;
+    font-size: 20px;
+    text-align: justify;
+    color: hsla(0deg, 2%, 33%, 100);
+  }
+  div.bread {
+    width: 100%;
+    min-width: 100%;
+    margin: 0 auto;
+    background-color: hsla(160deg, 52%, 40%, 15%);
+    height: 30px;
+  }
+  div.center {
+    width: fit-content;
+    margin: 0 auto;
+  }
+  div.bread a {
+    line-height: 30px;
+  }
+  div.bread a:first-child {
+    padding-left: 0px;
+    text-align: center;
+  }
+}
