--- a/html/navbar.css
+++ b/html/navbar.css
@@ -12,7 +12,7 @@ nav.navbar {
   height: 90px;
   margin: 0 auto;
   background-color: hsla(193deg, 100%, 96%, 100);
-  z-index: 2;
+  z-index: 50;
   position: sticky;
   top: 0;
   left: 0;
@@ -117,6 +117,13 @@ div.bread a:first-child {
     left: 50%;
     transform: translateY(-50%) translateX(-50%);
     backdrop-filter: blur(5px);
+  }
+  div.bread {
+    width: 100%;
+    min-width: 100%;
+    margin: 0 auto;
+    background-color: hsla(160deg, 52%, 40%, 15%);
+    height: 30px;
   }
 }
 
