--- a/html/recommend/recommend.css
+++ b/html/recommend/recommend.css
@@ -1,10 +1,10 @@
 @import url("../aside.css");
 
-body{
+body {
   background-color: hsla(193deg, 100%, 96%, 100);
 }
 
-div.banner{
+div.banner {
   margin: 0 auto;
   background-image: url("./images/banner.png");
   background-repeat: no-repeat;
@@ -15,7 +15,7 @@ div.banner{
   position: relative;
 }
 
-main.main{
+main.main {
   padding-top: 100px;
   /* border: 1px solid hsla(193deg, 100%, 96%, 1);  */
   width: 1200px;
@@ -23,31 +23,38 @@ main.main{
   position: relative;
   background-color: hsla(193deg, 100%, 96%, 100);
 }
-
-main section{
+p.sol {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-bottom: 80px;
+  text-align: center;
+  font-size: 24px;
+  color: hsla(0deg, 2%, 33%, 100);
+}
+main section {
   width: 690px;
   display: inline-block;
   vertical-align: top;
   margin-left: calc(1050px - 900px);
 }
-div.fit{
+div.fit {
   width: 1200px;
   display: inline-block;
   height: fit-content;
 }
- /* 八斗子車站 */
+/* 八斗子車站 */
 
-section div.station{
+section div.station {
   /* margin-top: 100px; */
-  box-shadow:1px 1px 1px lightgray;
-  background-color: hsla(160deg, 52%, 40%, .19);
+  box-shadow: 1px 1px 1px lightgray;
+  background-color: hsla(160deg, 52%, 40%, 0.19);
   border-radius: 5px;
   width: 700px;
   height: 355px;
   position: relative;
   margin-bottom: 50px;
 }
-section div.background{
+section div.background {
   background-color: hsla(0deg, 0%, 100%, 75%);
   width: 700px;
   height: 333px;
@@ -55,24 +62,24 @@ section div.background{
   top: 11px;
 }
 
-div.station img{
+div.station img {
   border-radius: 15px;
   width: 305px;
   height: 272px;
   position: absolute;
   top: 30px;
-  left:20px;
+  left: 20px;
   object-fit: cover;
 }
 
-div.station p.title{
+div.station p.title {
   font-size: 24px;
   position: absolute;
   left: 345px;
   top: 60px;
 }
 
-div.station p.content{
+div.station p.content {
   font-size: 18px;
   width: 325px;
   height: 170px;
@@ -83,9 +90,9 @@ div.station p.content{
 
 /* 鐵道自行車 */
 
-section div.bike{
-  box-shadow:1px 1px 1px lightgray;
-  background-color: hsla(160deg, 52%, 40%, .19);
+section div.bike {
+  box-shadow: 1px 1px 1px lightgray;
+  background-color: hsla(160deg, 52%, 40%, 0.19);
   border-radius: 5px;
   width: 700px;
   height: 355px;
@@ -93,24 +100,24 @@ section div.bike{
   margin-bottom: 50px;
 }
 
-div.bike img{
+div.bike img {
   border-radius: 15px;
   width: 305px;
   height: 272px;
   position: absolute;
   top: 30px;
-  left:20px;
+  left: 20px;
   object-fit: cover;
 }
 
-div.bike p.title{
+div.bike p.title {
   font-size: 24px;
   position: absolute;
   left: 345px;
   top: 60px;
 }
 
-div.bike p.content{
+div.bike p.content {
   font-size: 18px;
   width: 325px;
   height: 170px;
@@ -121,9 +128,9 @@ div.bike p.content{
 
 /* 石頭火鍋 */
 
-section div.food{
-  box-shadow:1px 1px 1px lightgray;
-  background-color: hsla(160deg, 52%, 40%, .19);
+section div.food {
+  box-shadow: 1px 1px 1px lightgray;
+  background-color: hsla(160deg, 52%, 40%, 0.19);
   border-radius: 5px;
   width: 700px;
   height: 355px;
@@ -131,24 +138,24 @@ section div.food{
   margin-bottom: 50px;
 }
 
-div.food img{
+div.food img {
   border-radius: 15px;
   width: 305px;
   height: 272px;
   position: absolute;
   top: 30px;
-  left:20px;
+  left: 20px;
   object-fit: cover;
 }
 
-div.food p.title{
+div.food p.title {
   font-size: 24px;
   position: absolute;
   left: 345px;
   top: 60px;
 }
 
-div.food p.content{
+div.food p.content {
   font-size: 18px;
   width: 325px;
   height: 170px;
@@ -159,9 +166,9 @@ div.food p.content{
 
 /* 海科館 */
 
-section div.mu{
-  box-shadow:1px 1px 1px lightgray;
-  background-color: hsla(160deg, 52%, 40%, .19);
+section div.mu {
+  box-shadow: 1px 1px 1px lightgray;
+  background-color: hsla(160deg, 52%, 40%, 0.19);
   border-radius: 5px;
   width: 700px;
   height: 355px;
@@ -169,24 +176,24 @@ section div.mu{
   margin-bottom: 50px;
 }
 
-div.mu img{
+div.mu img {
   border-radius: 15px;
   width: 305px;
   height: 272px;
   position: absolute;
   top: 30px;
-  left:20px;
+  left: 20px;
   object-fit: cover;
 }
 
-div.mu p.title{
+div.mu p.title {
   font-size: 24px;
   position: absolute;
   left: 345px;
   top: 60px;
 }
 
-div.mu p.content{
+div.mu p.content {
   font-size: 18px;
   width: 325px;
   height: 170px;
@@ -197,9 +204,9 @@ div.mu p.content{
 
 /* 潮境公園 */
 
-section div.park{
-  box-shadow:1px 1px 1px lightgray;
-  background-color: hsla(160deg, 52%, 40%, .19);
+section div.park {
+  box-shadow: 1px 1px 1px lightgray;
+  background-color: hsla(160deg, 52%, 40%, 0.19);
   border-radius: 5px;
   width: 700px;
   height: 355px;
@@ -207,24 +214,24 @@ section div.park{
   margin-bottom: 50px;
 }
 
-div.park img{
+div.park img {
   border-radius: 15px;
   width: 305px;
   height: 272px;
   position: absolute;
   top: 30px;
-  left:20px;
+  left: 20px;
   object-fit: cover;
 }
 
-div.park p.title{
+div.park p.title {
   font-size: 24px;
   position: absolute;
   left: 345px;
   top: 60px;
 }
 
-div.park p.content{
+div.park p.content {
   font-size: 18px;
   width: 325px;
   height: 170px;
@@ -235,9 +242,9 @@ div.park p.content{
 
 /* 廟口夜市 */
 
-section div.night_mark{
-  box-shadow:1px 1px 1px lightgray;
-  background-color: hsla(160deg, 52%, 40%, .19);
+section div.night_mark {
+  box-shadow: 1px 1px 1px lightgray;
+  background-color: hsla(160deg, 52%, 40%, 0.19);
   border-radius: 5px;
   width: 700px;
   height: 355px;
@@ -245,7 +252,7 @@ section div.night_mark{
   margin-bottom: px;
 }
 
-section div.back{
+section div.back {
   background-color: hsla(0deg, 0%, 100%, 75%);
   width: 700px;
   height: 333px;
@@ -253,24 +260,24 @@ section div.back{
   top: 11px;
 }
 
-div.night_mark img{
+div.night_mark img {
   border-radius: 15px;
   width: 305px;
   height: 272px;
   position: absolute;
   top: 30px !important;
-  left:20px;
+  left: 20px;
   object-fit: cover;
 }
 
-div.night_mark p.title{
+div.night_mark p.title {
   font-size: 24px;
   position: absolute;
   left: 345px;
   top: 60px;
 }
 
-div.night_mark p.content{
+div.night_mark p.content {
   font-size: 18px;
   width: 325px;
   height: 170px;
@@ -279,84 +286,44 @@ div.night_mark p.content{
   top: 105px;
 }
 
- /* 自訂行程 */
+/* 自訂行程 */
 
-p.try{
+p.try {
   font-size: 30px;
   margin-top: 100px;
   text-align: center;
-
   margin-bottom: 80px;
 }
 
-article{
+article {
   position: relative;
-  width: 1200px;
-  display: inline-block;
+  max-width: 1200px;
+  display: block;
 }
-
-article > img.try_1{
-  position: absolute;
-  top: 0px;
-  left: 260px;
-  z-index: 1;
+article img{
+  display: block;
+  margin: 0 auto;
 }
-
-article > img.try_2{
-  position: absolute;
-  top: 65px;
-  left: 520px;
-  z-index: 1;
-}
-
-article > img.try_3{
-  position: relative;
-  top: 130px;
-  left: 780px;
-  margin-bottom: 200px;
-  z-index: 1;
-}
-
-article > img.vector_1{
-  position: absolute;
-  left: 470px;
-  top: -10px;
-  transform: translateY(-30px);
-}
-
-article > img.vector_2{
-  position: absolute;
-  left: 730px;
-  top: 55px;
-  transform: translateY(-30px);
-}
-
-article > img.grad{
-  position: absolute;
-  left: 210px;
-  top: 65px;
-  z-index: 1;
-
-} 
-a.button{
+a.button {
   border: 1px solid black;
-  box-shadow:1px 1px 1px lightgray;
-  background-color: hsla(47deg, 78%, 74%, 100); 
+  box-shadow: 1px 1px 1px lightgray;
+  background-color: hsla(47deg, 78%, 74%, 100);
   border-color: hsla(47deg, 78%, 74%, 100);
   border-radius: 5px;
-  font-size: 24px; 
+  font-size: 24px;
   padding: 5px 20px;
-  position: relative;
-  bottom: 100px;
-  left: 500px
+  display: block;
+  width: fit-content;
+  margin: 0 auto;
+  margin-bottom: 80px;
 }
 
- /* 側邊導覽列 */
+/* 側邊導覽列 */
 
-article.line{
-  background-color: hsla(160deg, 52%, 40%, .19);
+article.line {
+  background-color: hsla(160deg, 52%, 40%, 0.19);
   border-radius: 5px;
-  box-shadow:1px 1px 1px lightgray;
+  box-shadow: 1px 1px 1px lightgray;
   width: 300px;
   height: 680px;
   display: inline-block;
@@ -365,14 +332,14 @@ article.line{
   bottom: 0px;
 }
 
-article.line > p.title{
+article.line > p.title {
   color: hsla(0deg, 2%, 33%, 1);
   font-size: 24px;
   position: absolute;
   left: 100px;
   top: 5px;
 }
-article.line > div.background{
+article.line > div.background {
   background-color: hsla(0deg, 0%, 100%, 73%);
   width: 300px;
   height: 635px;
@@ -383,7 +350,7 @@ article.line > div.background{
 /* 內容部分 */
 
 /* 八斗子車站 */
-article.line  div.station{
+article.line div.station {
   width: 250px;
   height: 80px;
   position: absolute;
@@ -391,7 +358,7 @@ article.line  div.station{
   top: 35px;
 }
 
-article.line  div.station > img.point_1{
+article.line div.station > img.point_1 {
   width: 25px;
   height: 25px;
   position: absolute;
@@ -399,7 +366,7 @@ article.line  div.station > img.point_1{
   top: 15px;
 }
 
-article.line  div.station > img.vector_1{
+article.line div.station > img.vector_1 {
   width: 17px;
   height: 19px;
   position: absolute;
@@ -407,31 +374,30 @@ article.line  div.station > img.vector_1{
   top: 60px;
 }
 
-article.line p.content_1{
+article.line p.content_1 {
   font-size: 18px;
   position: absolute;
   left: 40px;
 }
 
-article.line p.walk{
+article.line p.walk {
   font-size: 14px;
   color: hsla(0deg, 2%, 33%, 88%);
   position: absolute;
   left: 40px;
-  top: 25px; 
+  top: 25px;
 }
 
 /* 自行車 */
-article.line  div.bike{
+article.line div.bike {
   width: 250px;
   height: 80px;
   position: absolute;
   left: 30px;
   top: 130px;
-  
 }
 
-article.line  div.bike > img.point_1{
+article.line div.bike > img.point_1 {
   width: 25px;
   height: 25px;
   position: absolute;
@@ -439,7 +405,7 @@ article.line  div.bike > img.point_1{
   top: 15px;
 }
 
-article.line  div.bike > img.vector_1{
+article.line div.bike > img.vector_1 {
   width: 17px;
   height: 19px;
   position: absolute;
@@ -447,32 +413,31 @@ article.line  div.bike > img.vector_1{
   top: 60px;
 }
 
-article.line p.content_1{
+article.line p.content_1 {
   font-size: 18px;
   position: absolute;
   left: 40px;
 }
 
-article.line p.walk{
+article.line p.walk {
   font-size: 14px;
   color: hsla(0deg, 2%, 33%, 88%);
   position: absolute;
   left: 40px;
-  top: 25px; 
+  top: 25px;
 }
 
 /* 石頭火鍋 */
 
-article.line  div.food{
+article.line div.food {
   width: 250px;
   height: 120px;
   position: absolute;
   left: 30px;
   top: 230px;
-  
 }
 
-article.line  div.food > img.point_1{
+article.line div.food > img.point_1 {
   width: 25px;
   height: 25px;
   position: absolute;
@@ -480,7 +445,7 @@ article.line  div.food > img.point_1{
   top: 15px;
 }
 
-article.line  div.food > img.vector_1{
+article.line div.food > img.vector_1 {
   width: 17px;
   height: 19px;
   position: absolute;
@@ -488,32 +453,31 @@ article.line  div.food > img.vector_1{
   top: 90px;
 }
 
-article.line p.content_1{
+article.line p.content_1 {
   font-size: 18px;
   position: absolute;
   left: 40px;
 }
 
-article.line p.walk_1{
+article.line p.walk_1 {
   font-size: 14px;
   color: hsla(0deg, 2%, 33%, 88%);
   position: absolute;
   left: 40px;
-  top: 52px; 
+  top: 52px;
 }
 
 /* 海洋博物館 */
 
-article.line  div.mu{
+article.line div.mu {
   width: 250px;
   height: 80px;
   position: absolute;
   left: 30px;
   top: 360px;
-  
 }
 
-article.line  div.mu > img.point_1{
+article.line div.mu > img.point_1 {
   width: 25px;
   height: 25px;
   position: absolute;
@@ -521,7 +485,7 @@ article.line  div.mu > img.point_1{
   top: 15px;
 }
 
-article.line  div.mu > img.vector_1{
+article.line div.mu > img.vector_1 {
   width: 17px;
   height: 19px;
   position: absolute;
@@ -529,32 +493,31 @@ article.line  div.mu > img.vector_1{
   top: 60px;
 }
 
-article.line p.content_1{
+article.line p.content_1 {
   font-size: 18px;
   position: absolute;
   left: 40px;
 }
 
-article.line p.walk{
+article.line p.walk {
   font-size: 14px;
   color: hsla(0deg, 2%, 33%, 88%);
   position: absolute;
   left: 40px;
-  top: 25px; 
+  top: 25px;
 }
 
 /* 朝覲公園 */
 
-article.line  div.park{
+article.line div.park {
   width: 250px;
   height: 80px;
   position: absolute;
   left: 30px;
   top: 460px;
-  
 }
 
-article.line  div.park > img.point_1{
+article.line div.park > img.point_1 {
   width: 25px;
   height: 25px;
   position: absolute;
@@ -562,7 +525,7 @@ article.line  div.park > img.point_1{
   top: 15px;
 }
 
-article.line  div.park > img.vector_1{
+article.line div.park > img.vector_1 {
   width: 17px;
   height: 19px;
   position: absolute;
@@ -570,31 +533,30 @@ article.line  div.park > img.vector_1{
   top: 60px;
 }
 
-article.line p.content_1{
+article.line p.content_1 {
   font-size: 18px;
   position: absolute;
   left: 40px;
 }
 
-article.line p.walk{
+article.line p.walk {
   font-size: 14px;
   color: hsla(0deg, 2%, 33%, 88%);
   position: absolute;
   left: 40px;
-  top: 25px; 
+  top: 25px;
 }
 
- /* 廟口夜市 */
- article.line  div.night{
+/* 廟口夜市 */
+article.line div.night {
   width: 250px;
   height: 80px;
   position: absolute;
   left: 30px;
   top: 565px;
-  
 }
 
-article.line  div.night > img.point_2{
+article.line div.night > img.point_2 {
   width: 25px;
   height: 25px;
   position: absolute;
@@ -602,7 +564,7 @@ article.line  div.night > img.point_2{
   top: 2px;
 }
 
-article.line  div.night > img.vector_1{
+article.line div.night > img.vector_1 {
   width: 17px;
   height: 19px;
   position: absolute;
@@ -610,16 +572,176 @@ article.line  div.night > img.vector_1{
   top: 60px;
 }
 
-article.line p.content_1{
+article.line p.content_1 {
   font-size: 18px;
   position: absolute;
   left: 40px;
 }
 
-article.line p.walk{
+article.line p.walk {
   font-size: 14px;
   color: hsla(0deg, 2%, 33%, 88%);
   position: absolute;
   left: 40px;
-  top: 25px; 
+  top: 25px;
+}
+/* --------------------RWD ------------------*/
+@media screen and (max-width: 575.98px) {
+  div.banner {
+    margin: 0 auto;
+    background-image: url("./images/banner_2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-width: 100%;
+    height: 300px;
+    position: relative;
+  }
+  p.sol {
+    width: 340px;
+    margin: 80px auto;
+    margin-bottom: 150px;
+    font-size: 20px;
+    text-align: justify;
+    color: hsla(0deg, 2%, 33%, 100);
+  }
+  div.bread {
+    width: 100%;
+    min-width: 100%;
+    margin: 0 auto;
+    background-color: hsla(160deg, 52%, 40%, 15%);
+    height: 30px;
+  }
+  div.center {
+    width: fit-content;
+    margin: 0 auto;
+  }
+  div.bread a {
+    line-height: 30px;
+  }
+  div.bread a:first-child {
+    padding-left: 0px !important;
+    text-align: center;
+  }
+  main.main {
+    background-color: hsla(193deg, 100%, 96%, 100);
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+    /* overflow: hidden; */
+  }
+  article.line {
+    background-color: hsla(160deg, 52%, 40%, 0.19);
+    border-radius: 5 px;
+    box-shadow: 1px 1px 1px lightgrey;
+    width: 300 px;
+    height: 680 px;
+    display: inline-block;
+    position: sticky;
+    top: 150 px;
+    bottom: 0 px;
+    display: none;
+  }
+  div.fit {
+    width: 100%;
+    display: inline-block;
+    height: fit-content;
+  }
+  main section {
+    width: 100%;
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 0;
+  }
+  section div.background {
+    background-color: hsla(0deg, 0%, 100%, 75%);
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    width: 100%;
+    height: inherit;
+    position: static;
+  }
+  section div.station {
+    box-shadow: 1px 1px 1px lightgrey;
+    background-color: hsla(160deg, 52%, 40%, 0.19);
+    border-radius: 5px;
+    width: 95%;
+    margin: 0 auto;
+    padding: 30px 0px 30px 0px;
+    display: flex;
+    flex-direction: row;
+    height: inherit;
+    margin-bottom: 80px;
+  }
+  div.station p.title {
+    width: fit-content;
+    padding: 30px 0px 20px 0px;
+    margin: 0 auto;
+    font-size: 24px;
+    position: static;
+    order: 1;
+  }
+  div.station p.content {
+    font-size: 18px;
+    width: 100%;
+    padding: 30px 10px 30px 10px;
+    height: fit-content;
+    position: static;
+    margin: 0 auto;
+  }
+  div.station img {
+    margin: 0 auto;
+    width: 90%;
+    height: 66.666666666666vw;
+    position: static;
+    object-fit: cover;
+  }
+  p.sol {
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 0;
+    font-size: 20px;
+    text-align: center;
+    color: hsla(0deg, 2%, 33%, 100);
+  }
+  div.time {
+    width: fit-content;
+    margin: 0 auto;
+    margin-bottom: 80px;
+  }
+  div.text p:first-child {
+    margin: 0 auto;
+    width: fit-content;
+    font-size: 24px;
+  }
+  div.text p:nth-child(2) {
+    display: block;
+    width: fit-content;
+    font-size: 20px;
+    margin: 0 auto;
+    margin-top: 30px;
+  }
+  div.text > img {
+    width: 50px;
+    height: 50px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 30px;
+    opacity: 0.7;
+  }
+  p.try {
+    font-size: 24px;
+    margin-top:  0px;
+    text-align: center;
+    margin-bottom: 80 px;
+  }
+  article {
+    position: relative;
+    width: 100%;
+    display: inline-block;
+}
+  article img{
+    width: 100%;
+    margin-bottom: 50px;
+  }
 }
