--- a/html/index/index.css
+++ b/html/index/index.css
@@ -333,7 +333,7 @@ div.control > img#right {
   cursor: pointer;
 }
 
-/* div.images {
+div.images {
   width: 100%;
   max-width: 1200px;
   display: inline-flex;
@@ -341,10 +341,10 @@ div.control > img#right {
   position: absolute;
   top: 130px;
   font-size: 0;
-} */
+}
 
 div.images img.down {
-  /* transform: translateY(70px); */
+  transform: translateY(70px);
 }
 
 div.banner_3 {
